[package]
name = "switch_connector"
version = "0.1.0"
authors = ["Paul"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "0.4.2"
anyhow = "1.0.32"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["bluetoothapis"] }
